# HumanoidTH

./: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prisma.config.ts  pyproject.toml  seo-report.json  seo-report.md  thailand-humanoid-atlas-project.md  tsconfig.json  vercel.json
app/: actions.ts  error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/admin/: AdminConsolePage.tsx  page.tsx
app/admin-login/: AdminLoginForm.tsx  page.tsx
app/analytics/: AnalyticsBpmn.tsx  AnalyticsCharts.tsx  AnalyticsPlayground.tsx  page.tsx
app/components/: CopyCommands.tsx  DataPullFab.tsx  FirstTimeLoader.tsx  LanguageSelector.tsx  MobileHeader.tsx  MobileTabNav.tsx  RobotViewer.tsx  SidebarNav.tsx
app/contributions/: page.tsx
app/dashboard/: page.tsx
app/data-pulls/: page.tsx
app/database/: page.tsx
app/inventory/: page.tsx
app/map/: actions.ts  (+2 more)
data/: taxonomy.yml
docs/: data-governance.md  source-policy.md  taxonomy.md  vercel-deploy.md
lib/: classifiers.ts  geo.ts  map-points.ts  network-graph.ts  prisma.ts  seed-importer.ts  seo.ts  taxonomy.ts  translations.ts  url.ts
prisma/: schema.prisma  seed.ts
public/: llms.txt
scripts/: assert-no-mock-data.ts  dev.ts  ingest.ts  run_server.cmd  seo-optimizer.ts  verify-prisma.ts  watch-seed.ts
test/: classifiers.test.ts
tests/: conftest.py  test_pipeline.py  test_playwright_smoke.py  test_schema_and_ingest.py  test_web.py
tests-node/: network.spec.ts  smoke.spec.ts
(+62 files in other folders)
