[project]
name = "thailand-humanoid-atlas"
version = "0.1.0"
description = "Open-source research atlas for Thailand's humanoid and social robotics ecosystem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "uvicorn>=0.30",
  "typer>=0.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "networkx>=3.3",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "playwright>=1.45"]

[project.scripts]
humanoid-atlas = "humanoid_atlas.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humanoid_atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
